# ai-dj

./: .gitignore  .gitmodules  INSTALLATION.md  LICENSE  PRESS.md  README.md  SECURITY.md  YOUTUBE.md  client.py  env.example.txt  generate_params.py  install.bat  install.sh  installer.py  main.py  server_interface.py  test.sh  test_client.py  test_midi_clock.py  test_stable_audio_model.py
.github/: FUNDING.yml
.github/workflows/: build-all-platforms.yml  stale-issues.yml
config/: config.py  dj_profiles.py  live_profiles.py  music_prompts.py  vst_prompts.py
core/: api_keys_manager.py  audio_layer.py  audio_layer_sync.py  audio_processor.py  audio_simple.py  dj_system.py  genre_detector.py  keyword_cleaner.py  layer_manager.py  live_session.py  llm_interface.py  midi_clock_manager.py  music_generator.py  musicgen_wrapper.py  paths.py  secure_storage.py  simple_dj_system.py  stems_manager.py  tts_engine.py
distributed/: README.md
distributed/central-server/: .env.example  composer.json  init_db.php
distributed/central-server/public/: index.html  index.php  register.html  script.js  style.css  transparency.html
distributed/central-server/scripts/: auto_distribute.php  monthly_distribution.php
distributed/central-server/src/Controllers/: AuthController.php  DonationWebhookController.php  GenerateController.php  TransparencyController.php  WorkerController.php
distributed/central-server/src/Middleware/: AuthMiddleware.php  CorsMiddleware.php  LoginMiddleware.php
distributed/central-server/src/Models/: GenerationRequest.php  User.php  Worker.php
distributed/central-server/src/Services/: ApiKeyMiddleware.php  ApiKeyService.php  AuthService.php  CertificateService.php  EmailService.php  LoadBalancerService.php  RevenueDistributionService.php  WavSecurityService.php  WorkerPoolService.php
distributed/central-server/src/Utils/: Database.php
distributed/shared/: memory_providers.py
distributed/worker-node/: Dockerfile  generate_worker_identity.py  requirements.txt  worker_server.py
scripts/: build_executable.bat
server/api/: __init__.py  api_request_handler.py  audio_loop_player.py  dj_ia_client.py  models.py  routes.py
utils/: audio_utils.py  file_utils.py  prompt_utils.py
vst/: CMakeLists.txt
vst/src/: ._CustomLookAndFeel.h  AudioAnalyzer.h  BinaryData.cpp  BinaryData.h  CategoryWindow.cpp  CategoryWindow.h  ColourPalette.cpp  ColourPalette.h  CustomLookAndFeel.h  DjIaClient.h  DummySynth.h  JuceHeader.h  LlamaEngine.cpp  LlamaEngine.h  MasterChannel.cpp  MasterChannel.h  MidiLearnManager.cpp  MidiLearnManager.h  MidiLearnableComponents.h  MidiMapping.h  MixerChannel.cpp  MixerChannel.h  MixerPanel.cpp  MixerPanel.h  ObsidianEngine.h  PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp  PluginProcessor.cpp  PluginProcessor.h  SampleBank.cpp  SampleBank.h  SampleBankPanel.cpp  SampleBankPanel.h  SequencerComponent.cpp  SequencerComponent.h  SimpleEQ.h  StableAudioEngine.cpp  StableAudioEngine.h  TrackComponent.cpp  (+6 more)
